[package]
name = "muon_core"
version = "0.1.0"
authors = ["David Dawson <me@daviddawson.me>"]

[dependencies]
uuid = "0.5.0"
libc = "0.2"
net2 = "0.2.27"
mio = "0.6.6"
log = "0.3.6"
env_logger = "0.4.0"
bytes      = "0.3.0"
cargo-test-xunit = { git = "https://github.com/evernym/cargo-test-xunit" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
atomic_ring_buffer = "1.0"
lazy_static = "0.2.8"

[lib]
name = "muon_core"
crate-type = ["rlib"]
